2002-05-01  Anders Carlsson  <andersca@gnu.org>

	* rsvg.c: (rsvg_handle_close):
	Check for a NULL context in case we haven't called
	rsvg_handle_write to create it. Fixes #80374, reported by
	Jakub Steiner.
	
2002-04-18  Ramiro Estrugo  <ramiro@fateware.com>

	* MAINTAINERS: Removed myself from list.

2002-03-13  Gregory Leblanc  <gleblanc@linuxweasel.com>

	* librsvg.spec.in: rather big rework, from Chris Chabot

	Not sure if that next line belongs or not...

=== librsvg 1.1.6 ===

2002-03-07  Darin Adler  <darin@bentspoon.com>

	* NEWS: News for 1.1.6.
	* configure.in: Bump version.

2002-03-07  Darin Adler  <darin@bentspoon.com>

	* rsvg.c: (rsvg_start_svg): Check for width 0 and height 0
	cases. Make warnings clearer.
	(rsvg_size_callback): Explicitly check for bad width and
	height. Before, we sometimes did math starting with -1 and
	yielding 0, which led to a divide by zero.
	
	* test-71622.svg: New test case.

=== librsvg 1.1.5 ===

2002-03-04  Darin Adler  <darin@bentspoon.com>

	* NEWS: News for 1.1.5.

2002-02-28  Darin Adler  <darin@bentspoon.com>

	* configure.in: Bump version.

2002-02-28  Alexander Larsson  <alla@lysator.liu.se>

	* rsvg.h: (rsvg_pixbuf_from_file_at_zoom_with_max): New function.
	* rsvg.c: (RsvgSizeType, struct RsvgSizeCallbackData):
	Use enum instead of booleans to store the type of size callback.
	(rsvg_size_callback): Implement ZOOM_MAX, other changes due to the
	usage of the RsvgSizeType enum.
	(rsvg_pixbuf_from_file_at_zoom_with_max): Implement new function.

=== librsvg 1.1.4 ===

2002-02-25  Darin Adler  <darin@bentspoon.com>

	* NEWS: News for 1.1.4.

2002-02-25  Darin Adler  <darin@bentspoon.com>

	* .cvsignore: Ignore new test program binary.
	* configure.in: Bump version.

2002-02-24  Alexander Larsson  <alla@lysator.liu.se>

	* rsvg.c: (rsvg_pixbuf_from_file_at_max_size): New function
	for scaling an svg uniformly to fit in a rectangle.
	(rsvg_size_callback): Handle max_size_set