@@ -1,3 +1,9 @@
+2002-06-08  Michael Meeks  <michael@ximian.com>
+
+	* rsvg.c (rsvg_render_bpath): perturb the 
+	close vpath so we don't get numerical stability
+	problems.
+
 2002-05-01  Anders Carlsson  <andersca@gnu.org>
 
 	* rsvg.c: (rsvg_handle_close):
